--- a/css/index.css
+++ b/css/index.css
@@ -678,6 +678,8 @@
 @media screen and (max-width:1024px) {
 
     .address {
+        max-width: 100%;
+        margin: 0 auto;
         padding: 64px 12px;
     }
 }
